--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ main {
   position: relative;
 }
 
-.box:nth-child(1),
+.box:first-child,
 .box:nth-child(2) {
   margin-right: 30px;
 }
@@ -66,6 +66,22 @@ footer {
   background-color: #aaaaaa;
 }
 
-@media screen and (max-width: 768) {
-}
+@media screen and (max-width: 768px) {
+  main {
+    width: 100%;
+    display: block;
+  }
 
+  .box {
+    width: 90%;
+  }
+
+  .box:first-child,
+  .box:nth-child(2) {
+    margin: 0 auto 20px auto;
+  }
+
+  .box:last-child {
+    margin: 0 auto;
+  }
+}
